--- a/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
+++ b/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
@@ -9,6 +9,9 @@
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 		<PackageReference Include="Serilog" Version="2.9.0" />
 		<PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+		<PackageReference Include="Vostok.Datacenters.Kontur" Version="1.0.36" />
+		<PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
+		<PackageReference Include="Vostok.Tracing.Kontur" Version="1.0.14" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Common.Api\Common.Api.csproj" />
