--- a/src/Common.Api.Application/Common.Api.Application.csproj
+++ b/src/Common.Api.Application/Common.Api.Application.csproj
@@ -20,8 +20,10 @@
 		<PackageReference Include="Vostok.Applications.AspNetCore" Version="0.1.11" />
 		<PackageReference Include="Vostok.Configuration" Version="0.1.14" />
 		<PackageReference Include="Vostok.Datacenters.Kontur" Version="1.0.36" />
-		<PackageReference Include="Vostok.Hosting" Version="0.1.10" />
+		<PackageReference Include="Vostok.Hosting" Version="0.1.15" />
+		<PackageReference Include="Vostok.Hosting.Kontur" Version="1.0.37" />
 		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.2" />
+		<PackageReference Include="Vostok.ServiceDiscovery.Kontur" Version="1.0.39" />
 		<PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
 		<PackageReference Include="Vostok.Tracing.Kontur" Version="1.0.14" />
 	</ItemGroup>
