--- a/src/VideoAnnotations.Api/VideoAnnotations.Api.csproj
+++ b/src/VideoAnnotations.Api/VideoAnnotations.Api.csproj
@@ -15,6 +15,9 @@
 
 	<ItemGroup>
 	  <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+	  <PackageReference Include="Vostok.Datacenters.Kontur" Version="1.0.36" />
+	  <PackageReference Include="Vostok.Telemetry.Kontur" Version="1.0.39" />
+	  <PackageReference Include="Vostok.Tracing.Kontur" Version="1.0.14" />
 	</ItemGroup>
 
 </Project>
