--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -17,6 +17,7 @@
   <package id="Graphite.Elmah" version="1.0.3.0" targetFramework="net472" />
   <package id="IdentityModel" version="4.1.1" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net472" />
+  <package id="Kontur.Lz4" version="0.1.13" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net472" />
   <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net472" />
@@ -148,6 +149,36 @@
   <package id="Telegram.Bot" version="15.0.0" targetFramework="net472" />
   <package id="TextCopy" version="3.0.1" targetFramework="net472" />
   <package id="UnidecodeSharpCore" version="2.0.1" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Context" version="0.1.4" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Core" version="0.1.17" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Datacenters" version="0.1.2" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Topology.CC" version="0.1.1" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Tracing" version="0.1.1" targetFramework="net472" />
+  <package id="Vostok.ClusterClient.Transport" version="0.1.12" targetFramework="net472" />
+  <package id="Vostok.ClusterConfig.Client" version="0.1.8" targetFramework="net472" />
+  <package id="Vostok.ClusterConfig.Client.Abstractions" version="0.1.0" targetFramework="net472" />
+  <package id="Vostok.Configuration" version="0.1.14" targetFramework="net472" />
+  <package id="Vostok.Configuration.Abstractions" version="0.1.9" targetFramework="net472" />
+  <package id="Vostok.Configuration.Logging" version="0.1.1" targetFramework="net472" />
+  <package id="Vostok.Configuration.Sources" version="0.1.9" targetFramework="net472" />
+  <package id="Vostok.Configuration.Sources.ClusterConfig" version="0.1.6" targetFramework="net472" />
+  <package id="Vostok.Context" version="0.1.3" targetFramework="net472" />
+  <package id="Vostok.Datacenters" version="0.1.4" targetFramework="net472" />
+  <package id="Vostok.Datacenters.Kontur" version="1.0.36" targetFramework="net472" />
+  <package id="Vostok.Hercules.Client" version="0.1.10" targetFramework="net472" />
+  <package id="Vostok.Hercules.Client.Abstractions" version="0.1.4" targetFramework="net472" />
+  <package id="Vostok.Logging.Abstractions" version="1.0.9" targetFramework="net472" />
+  <package id="Vostok.Logging.Formatting" version="1.0.4" targetFramework="net472" />
+  <package id="Vostok.Logging.Hercules" version="0.1.2" targetFramework="net472" />
+  <package id="Vostok.Logging.Tracing" version="0.1.5" targetFramework="net472" />
+  <package id="Vostok.Metrics" version="0.2.11" targetFramework="net472" />
+  <package id="Vostok.Metrics.Hercules" version="0.1.0" targetFramework="net472" />
+  <package id="Vostok.Telemetry.Kontur" version="1.0.39" targetFramework="net472" />
+  <package id="Vostok.Tracing" version="0.1.1" targetFramework="net472" />
+  <package id="Vostok.Tracing.Abstractions" version="0.1.2" targetFramework="net472" />
+  <package id="Vostok.Tracing.Extensions" version="0.1.2" targetFramework="net472" />
+  <package id="Vostok.Tracing.Hercules" version="0.1.0" targetFramework="net472" />
+  <package id="Vostok.Tracing.Kontur" version="1.0.14" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
