--- a/src/VideoAnnotations.Web/appsettings.json
+++ b/src/VideoAnnotations.Web/appsettings.json
@@ -3,8 +3,7 @@
     "environment": "dev",
     "hercules": {
         "apiKey": "",
-        "stream": "",
-        "host": "https://vostok.skbkontur.ru"
+        "stream": ""
     },
     "hostLog": {
         "console": true,
