--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -33,5 +33,13 @@
         }
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
-    "runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF"
+    "runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF",
+	"antiplagiarismClient": {
+		"enabled": true,
+		"endpoint": "http://localhost:33333/api",
+		"token": "A21DB9C3-A4B1-4B8D-9ED5-B0DF973FF060"
+	},
+	"videoAnnotationsClient": {
+		"endpoint": "http://localhost:40001/"
+	}
 }
