--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -36,7 +36,7 @@
     "runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF",
 	"antiplagiarismClient": {
 		"enabled": true,
-		"endpoint": "http://localhost:33333/api",
+		"endpoint": "http://localhost:33333/api/",
 		"token": "A21DB9C3-A4B1-4B8D-9ED5-B0DF973FF060"
 	},
 	"videoAnnotationsClient": {
