--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -166,6 +166,7 @@
 			<mimeMap fileExtension="zip" mimeType="application/zip" />
 			<mimeMap fileExtension="mmap" mimeType="application/vnd.mindjet.mindmanage" />
 			<mimeMap fileExtension="xmind" mimeType="application/vnd.xmind.workbook" />
+			<mimeMap fileExtension="fig" mimeType="application/octet-stream" />
 		</staticContent>
 
 		<security>
