--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -14,87 +14,88 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@babel/core": "7.7.4",
-    "@sentry/browser": "5.10.1",
-    "@skbkontur/react-icons": "3.2.1",
-    "@skbkontur/react-ui": "1.6.5",
-    "autoprefixer": "9.7.2",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "8.0.6",
-    "babel-preset-react-app": "9.0.2",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "3.0.0",
+    "@skbkontur/react-icons": "4.2.0",
+    "@skbkontur/react-ui": "2.1.1",
+    "autoprefixer": "9.7.6",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
+    "babel-preset-react-app": "9.1.2",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "4.0.0",
     "classnames": "2.2.6",
-    "codemirror": "5.49.2",
-    "core-js": "3.4.7",
-    "css-loader": "3.2.0",
+    "codemirror": "5.52.2",
+    "core-js": "3.6.5",
+    "css-loader": "3.5.2",
     "debounce": "1.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "file-loader": "5.0.2",
+    "file-loader": "6.0.0",
     "file-saver": "2.0.2",
-    "fs-extra": "8.1.0",
-    "jest": "24.9.0",
+    "fs-extra": "9.0.0",
+    "jest": "25.4.0",
     "katex": "0.11.1",
-    "outdated-browser-rework": "2.9.0",
-    "postcss-flexbugs-fixes": "4.1.0",
+    "outdated-browser-rework": "2.10.0",
+    "postcss-flexbugs-fixes": "4.2.0",
     "prop-types": "latest",
-    "query-string": "5.1.1",
+    "query-string": "6.12.1",
     "raf": "3.4.1",
-    "react": "16.12.0",
+    "raven-js": "^3.27.2",
+    "react": "16.13.1",
     "react-copy-to-clipboard": "5.0.2",
-    "react-dev-utils": "9.1.0",
-    "react-dom": "16.12.0",
-    "react-helmet": "beta",
-    "react-redux": "7.1.3",
-    "react-responsive": "8.0.1",
+    "react-dev-utils": "10.2.1",
+    "react-dom": "16.13.1",
+    "react-helmet": "6.0.0",
+    "react-redux": "7.2.0",
+    "react-responsive": "8.0.3",
     "react-router-dom": "5.1.2",
     "react-transition-group": "4.3.0",
     "react-yandex-metrika": "2.6.0",
-    "redux": "4.0.4",
+    "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "style-loader": "1.0.1",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "url-loader": "3.0.0",
-    "webpack": "4.41.2",
-    "webpack-dev-server": "3.9.0",
+    "style-loader": "1.1.4",
+    "sw-precache-webpack-plugin": "1.0.0",
+    "url-loader": "4.1.0",
+    "webpack": "4.42.1",
+    "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "4.2.2",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.7.4",
-    "@babel/plugin-transform-arrow-functions": "7.7.4",
-    "@babel/plugin-transform-modules-commonjs": "7.7.4",
-    "@babel/preset-env": "7.7.4",
-    "@babel/preset-react": "7.7.4",
-    "@storybook/addon-actions": "5.2.6",
-    "@storybook/addon-viewport": "5.2.6",
-    "@storybook/addons": "5.2.6",
-    "@storybook/react": "5.2.6",
-    "eslint": "6.7.1",
-    "eslint-config-react-app": "5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "4.5.2",
-    "eslint-plugin-import": "2.18.2",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.5",
+    "@babel/plugin-transform-arrow-functions": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/preset-react": "7.9.4",
+    "@storybook/addon-actions": "5.3.18",
+    "@storybook/addon-viewport": "5.3.18",
+    "@storybook/addons": "5.3.18",
+    "@storybook/react": "5.3.18",
+    "eslint": "6.8.0",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-loader": "4.0.0",
+    "eslint-plugin-flowtype": "4.7.0",
+    "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "html-webpack-plugin": "next",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
+    "html-webpack-plugin": "4.2.0",
     "identity-obj-proxy": "3.0.0",
-    "less": "3.10.3",
+    "less": "3.11.1",
     "less-loader": "5.0.0",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
-    "moment-timezone": "0.5.27",
+    "moment-timezone": "0.5.28",
     "postcss-loader": "3.0.0",
-    "prettier": "1.19.1",
+    "prettier": "2.0.4",
     "storybook-react-router": "1.0.8",
-    "terser-webpack-plugin": "2.2.1",
+    "terser-webpack-plugin": "2.3.5",
     "uglifyjs-webpack-plugin": "latest",
-    "webpack-bundle-analyzer": "3.6.0"
+    "webpack-bundle-analyzer": "3.7.0",
+    "webpack-cli": "3.3.11"
   },
   "eslintConfig": {
     "extends": "react-app",
