--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -50,6 +50,7 @@
     "react-router-dom": "5.1.2",
     "react-transition-group": "4.3.0",
     "react-yandex-metrika": "2.6.0",
+    "react-youtube": "7.11.2",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
