ULEARN-400 likely add in project

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1195,6 +1195,7 @@
     <Content Include="Content\libs\jquery-ui.min.css" />
     <Content Include="Content\libs\jquery.datetimepicker.min.css" />
     <Content Include="Content\libs\likely.css" />
+    <Content Include="Content\likely.css" />
     <Content Include="Content\loading-ring.gif" />
     <Content Include="Content\loading.gif" />
     <Content Include="Content\login_and_registration.css" />
@@ -1296,6 +1297,7 @@
     <Content Include="Scripts\libs\notify-custom.min.js" />
     <Content Include="Scripts\libs\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\libs\table-configurator.js" />
+    <Content Include="Scripts\likely.js" />
     <Content Include="Scripts\modals.js" />
     <Content Include="Scripts\notifications-settings.js" />
     <Content Include="Scripts\notifications.js" />
