ULEARN-404 lection slide blocks in api

--- a/src/Core.Tests/Core.Tests.csproj
+++ b/src/Core.Tests/Core.Tests.csproj
@@ -33,6 +33,9 @@
 		<Content Include="Courses\ScoringGroups\TestData\**\*">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<Content Update="Courses\Slides\TestData\SlideWithSpoilerBlockAndMarkdown.xml">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
