ULEARN-417 Parse images from markdown to ImageGalleryBlock

--- a/src/Core.Tests/Core.Tests.csproj
+++ b/src/Core.Tests/Core.Tests.csproj
@@ -39,6 +39,9 @@
 		<Content Update="Courses\Slides\TestData\SlideWithCodeInMarkdown.xml">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
+		<Content Update="Courses\Slides\TestData\SlideWithImageInMarkdown.xml">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
