--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,6 +7,7 @@
 		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="AngleSharp" Version="0.14.0" />
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
 		<PackageReference Include="log4net" Version="2.0.8" />
 		<PackageReference Include="MarkdownDeep.NET.Core" Version="1.5.0.4" />
