--- a/src/Web.Api.Tests/Web.Api.Tests.csproj
+++ b/src/Web.Api.Tests/Web.Api.Tests.csproj
@@ -31,4 +31,19 @@
 		</Reference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Include="Controllers\Slides\TestData\SimpleSlideWithMarkdownBlocks.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Controllers\Slides\TestData\SlideWithCodeInMarkdown.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Controllers\Slides\TestData\SlideWithImageInMarkdown.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Include="Controllers\Slides\TestData\SlideWithSpoilerBlockAndMarkdown.xml">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
