--- a/src/CsSandboxer/CsSandboxer.csproj
+++ b/src/CsSandboxer/CsSandboxer.csproj
@@ -14,6 +14,7 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <OutputPath>..\Job\bin\$(Configuration)\</OutputPath>
