--- a/src/XQueueWatcher/XQueueWatcher.csproj
+++ b/src/XQueueWatcher/XQueueWatcher.csproj
@@ -15,6 +15,7 @@
     <PackageProjectUrl>https://ulearn.me</PackageProjectUrl>
     <PackageTags>ulearn education mooc xqueue</PackageTags>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
