Web.Api appsettings.json videoAnnotationsClient:endpoint

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -50,5 +50,8 @@
         "api": {
             "endpoint": "http://localhost:8000/"
         }
+    },
+    "videoAnnotationsClient": {
+        "endpoint": "http://localhost:40001/"
     }
 }
