--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -41,10 +41,13 @@
     "raf": "3.4.1",
     "raven-js": "3.27.2",
     "react": "16.13.1",
+    "react-codemirror2": "7.1.0",
+    "react-cookie": "^4.0.3",
     "react-copy-to-clipboard": "5.0.2",
     "react-dev-utils": "10.2.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.0.0",
+    "react-image-gallery": "^1.0.7",
     "react-redux": "7.2.0",
     "react-responsive": "8.0.3",
     "react-router-dom": "5.1.2",
