fix Database csproj for migration

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -445,6 +445,12 @@
     <Compile Update="Migrations\201407180807286_AddQuestions.Designer.cs">
       <DependentUpon>201407180807286_AddQuestions.cs</DependentUpon>
     </Compile>
+	<Compile Update="Migrations\202005201329356_addLastUpdateTime.Designer.cs">
+	  <DependentUpon>202005201329356_addLastUpdateTime.cs</DependentUpon>
+	</Compile>
+	<Compile Update="Migrations\202005201413421_AddTempCourseErrors.Designer.cs">
+	  <DependentUpon>202005201413421_AddTempCourseErrors.cs</DependentUpon>
+	</Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Migrations\201407111234255_InitialCreate.resx">
@@ -864,5 +870,11 @@
     <EmbeddedResource Update="Migrations\202005030946436_AddTempCourse.resx">
       <DependentUpon>202005030946436_AddTempCourse.cs</DependentUpon>
     </EmbeddedResource>
+	<EmbeddedResource Update="Migrations\202005201329356_addLastUpdateTime.resx">
+	  <DependentUpon>202005201329356_addLastUpdateTime.cs</DependentUpon>
+	</EmbeddedResource>
+	<EmbeddedResource Update="Migrations\202005201413421_AddTempCourseErrors.resx">
+	  <DependentUpon>202005201413421_AddTempCourseErrors.cs</DependentUpon>
+	</EmbeddedResource>
   </ItemGroup>
 </Project>
