--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -9,6 +9,13 @@
       <PackageReference Include="Autofac" Version="5.1.2" />
       <PackageReference Include="CommandLineParser" Version="2.7.82" />
       <PackageReference Include="DotNetZip" Version="1.13.7" />
+      <PackageReference Include="log4net" Version="2.0.8" />
     </ItemGroup>
+
+	<ItemGroup>
+		<Content Include="log4net.config">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
