ULEARN-427 AntiPlagiarism coefficients and beta distribution

--- a/src/ManualUtils/appsettings.json
+++ b/src/ManualUtils/appsettings.json
@@ -1,3 +1,4 @@
 ﻿{
-	"database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
+	"database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
+	"coursesDirectory": "../../../../Courses/"
 }
