--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Accord.Statistics" Version="3.8.0" />
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
