--- a/src/ManualUtils/ManualUtils.csproj
+++ b/src/ManualUtils/ManualUtils.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net472</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<GenerateBindingRedirectsOutputType>false</GenerateBindingRedirectsOutputType>
 		<AllowedReferenceRelatedFileExtensions>.pdb</AllowedReferenceRelatedFileExtensions>
 		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -25,8 +25,9 @@
 		<DebugType>pdbonly</DebugType>
 	</PropertyGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\AntiPlagiarism.Web\AntiPlagiarism.Web.csproj" />
 		<ProjectReference Include="..\Common\Common.csproj" />
-		<ProjectReference Include="..\Database\Database.csproj" />
+		<ProjectReference Include="..\Database.Core\Database.Core.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Update="appsettings.local.json">
