--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -7,8 +7,8 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
-      <PackageReference Include="CommandLineParser" Version="2.7.82" />
       <PackageReference Include="DotNetZip" Version="1.13.7" />
+      <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
       <PackageReference Include="log4net" Version="2.0.8" />
     </ItemGroup>
 
