--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -14,91 +14,91 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@skbkontur/react-icons": "4.2.0",
-    "@skbkontur/react-ui": "^2.2.0",
-    "autoprefixer": "9.7.6",
+    "@skbkontur/react-icons": "4.3.1",
+    "@skbkontur/react-ui": "2.3.1",
+    "autoprefixer": "9.8.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-preset-react-app": "9.1.2",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "chalk": "4.0.0",
+    "chalk": "4.1.0",
     "classnames": "2.2.6",
-    "codemirror": "5.52.2",
+    "codemirror": "5.54.0",
     "core-js": "3.6.5",
-    "css-loader": "3.5.2",
+    "css-loader": "3.6.0",
     "debounce": "1.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "file-loader": "6.0.0",
     "file-saver": "2.0.2",
-    "fs-extra": "9.0.0",
-    "jest": "25.4.0",
+    "fs-extra": "9.0.1",
+    "jest": "25.5.4",
     "katex": "0.11.1",
     "outdated-browser-rework": "2.10.0",
-    "postcss-flexbugs-fixes": "4.2.0",
+    "postcss-flexbugs-fixes": "4.2.1",
     "prop-types": "latest",
-    "query-string": "6.12.1",
+    "query-string": "6.13.1",
     "raf": "3.4.1",
     "raven-js": "3.27.2",
     "react": "16.13.1",
-    "react-codemirror2": "7.1.0",
-    "react-cookie": "^4.0.3",
+    "react-codemirror2": "7.2.1",
+    "react-cookie": "4.0.3",
     "react-copy-to-clipboard": "5.0.2",
     "react-dev-utils": "10.2.1",
     "react-dom": "16.13.1",
-    "react-helmet": "6.0.0",
-    "react-image-gallery": "^1.0.7",
+    "react-helmet": "6.1.0",
+    "react-image-gallery": "1.0.7",
     "react-redux": "7.2.0",
-    "react-responsive": "8.0.3",
-    "react-router-dom": "5.1.2",
-    "react-transition-group": "4.3.0",
+    "react-responsive": "8.1.0",
+    "react-router-dom": "5.2.0",
+    "react-transition-group": "4.4.1",
     "react-yandex-metrika": "2.6.0",
     "react-youtube": "7.11.2",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "style-loader": "1.1.4",
+    "style-loader": "1.2.1",
     "sw-precache-webpack-plugin": "1.0.0",
     "url-loader": "4.1.0",
-    "webpack": "4.42.1",
-    "webpack-dev-server": "3.10.3",
+    "webpack": "4.43.0",
+    "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "4.2.2",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.9.5",
-    "@babel/plugin-transform-arrow-functions": "7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "7.9.0",
-    "@babel/preset-env": "7.9.5",
-    "@babel/preset-react": "7.9.4",
-    "@storybook/addon-actions": "5.3.18",
-    "@storybook/addon-viewport": "5.3.18",
-    "@storybook/addons": "5.3.18",
-    "@storybook/react": "5.3.18",
+    "@babel/core": "7.10.2",
+    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.1",
+    "@babel/plugin-transform-arrow-functions": "7.10.1",
+    "@babel/plugin-transform-modules-commonjs": "7.10.1",
+    "@babel/preset-env": "7.10.2",
+    "@babel/preset-react": "7.10.1",
+    "@storybook/addon-actions": "5.3.19",
+    "@storybook/addon-viewport": "5.3.19",
+    "@storybook/addons": "5.3.19",
+    "@storybook/react": "5.3.19",
     "eslint": "6.8.0",
     "eslint-config-react-app": "5.2.1",
-    "eslint-loader": "4.0.0",
+    "eslint-loader": "4.0.2",
     "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "3.0.0",
-    "html-webpack-plugin": "4.2.0",
+    "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "3.0.0",
-    "less": "3.11.1",
+    "less": "3.11.3",
     "less-loader": "5.0.0",
     "mini-css-extract-plugin": "0.9.0",
-    "moment": "2.24.0",
-    "moment-timezone": "0.5.28",
+    "moment": "2.26.0",
+    "moment-timezone": "0.5.31",
     "postcss-loader": "3.0.0",
-    "prettier": "2.0.4",
+    "prettier": "2.0.5",
     "storybook-react-router": "1.0.8",
-    "terser-webpack-plugin": "2.3.5",
+    "terser-webpack-plugin": "2.3.7",
     "uglifyjs-webpack-plugin": "latest",
-    "webpack-bundle-analyzer": "3.7.0",
+    "webpack-bundle-analyzer": "3.8.0",
     "webpack-cli": "3.3.11"
   },
   "eslintConfig": {
