ULEARN-428 AntiPlagiarism: old submission influence border

--- a/src/AntiPlagiarism.UpdateDb/appsettings.json
+++ b/src/AntiPlagiarism.UpdateDb/appsettings.json
@@ -9,6 +9,7 @@
     },
     "graphiteServiceName": "antiplagiarism-updatedb",
     "antiplagiarism": {
-        "snippetTokensCount": 12
+        "snippetTokensCount": 12,
+        "submissionInfluenceLimitInMonths": 24
     }
 }
