--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -15,6 +15,7 @@
     "graphiteServiceName": "antiplagiarism",
     "antiplagiarism": {
         "snippetTokensCount": 12,
+        "submissionInfluenceLimitInMonths": 24,
         "maxCodeLength": 100000,
         "statisticsAnalyzing": {
             "countOfLastAuthorsForCalculatingMeanAndDeviation": 100,
@@ -35,8 +36,11 @@
         "actions": {
             "getAuthorPlagiarisms": {
                 "maxLastSubmissionsCount": 50
+            },
+            "UpdateOldSubmissionsFromStatistics": {
+                "startTime": "04:10:00"
             }
         },
-		"threadsCount": 2
+        "threadsCount": 2
     }
 }
