--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -877,5 +877,11 @@
 	<EmbeddedResource Update="Migrations\202005201413421_AddTempCourseErrors.resx">
 	  <DependentUpon>202005201413421_AddTempCourseErrors.cs</DependentUpon>
 	</EmbeddedResource>
+	<EmbeddedResource Update="Migrations\202007091243283_CourseIdLength64.resx">
+	  <DependentUpon>202007091243283_CourseIdLength64.cs</DependentUpon>
+	</EmbeddedResource>
+	<EmbeddedResource Update="Migrations\202007091305416_CourseIdLength100.resx">
+	  <DependentUpon>202007091305416_CourseIdLength100.cs</DependentUpon>
+	</EmbeddedResource>
   </ItemGroup>
 </Project>
