--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -1,21 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
-
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
       <PackageReference Include="DotNetZip" Version="1.13.7" />
       <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
       <PackageReference Include="log4net" Version="2.0.8" />
     </ItemGroup>
-
 	<ItemGroup>
 		<Content Include="log4net.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
-
+	<Target Name="CreateCourseToolHotReloaderZip" BeforeTargets="OctoPack" Condition="$(RunOctoPack)">
+		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; Compress-Archive -Path '$(TargetDir)*' -DestinationPath '$(TargetDir)CourseToolHotReloader.zip' -Force&quot;" />
+	</Target>
 </Project>
