--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="DotNetZip" Version="1.13.7" />
       <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
       <PackageReference Include="log4net" Version="2.0.8" />
+      <PackageReference Include="OctoPack" Version="3.6.4" />
     </ItemGroup>
 	<ItemGroup>
 		<Content Include="log4net.config">
