--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
-      <PackageReference Include="DotNetZip" Version="1.13.7" />
+      <PackageReference Include="DotNetZip" Version="1.13.4" />
       <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
       <PackageReference Include="log4net" Version="2.0.8" />
       <PackageReference Include="OctoPack" Version="3.6.4" />
@@ -14,6 +14,9 @@
 		<Content Include="log4net.config">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Common\Common.csproj" />
 	</ItemGroup>
 	<Target Name="CreateCourseToolHotReloaderZip" BeforeTargets="OctoPack" Condition="$(RunOctoPack)">
 		<Exec Command="powershell -NonInteractive -executionpolicy Unrestricted &quot; Compress-Archive -Path '$(TargetDir)*' -DestinationPath '$(TargetDir)CourseToolHotReloader.zip' -Force&quot;" />
