--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -883,5 +883,8 @@
 	<EmbeddedResource Update="Migrations\202007091305416_CourseIdLength100.resx">
 	  <DependentUpon>202007091305416_CourseIdLength100.cs</DependentUpon>
 	</EmbeddedResource>
+	<EmbeddedResource Update="Migrations\202007241042257_AddQuizIgnoreInAttemptsCount.resx">
+	  <DependentUpon>202007241042257_AddQuizIgnoreInAttemptsCount.cs</DependentUpon>
+	</EmbeddedResource>
   </ItemGroup>
 </Project>
