--- a/src/CourseToolHotReloader/log4net.config
+++ b/src/CourseToolHotReloader/log4net.config
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-    <appender name="RollingFile" type="log4net.Appender.FileAppender">
-        <appendToFile value="false"/>
-        <file value="..\logs\app.log" />
-        <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%-5p %d{hh:mm:ss} %message%newline" />
-        </layout>
-    </appender>
-
-    <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
-        <file value="..\logs\error.log"/>
-        <appendToFile value="false"/>
-        <maximumFileSize value="5MB"/>
-        <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%-5p %d{hh:mm:ss} %message%newline" />
-        </layout>
-        <filter type="log4net.Filter.LevelRangeFilter">
-            <levelMin value="ERROR"/>
-            <levelMax value="FATAL"/>
-        </filter>
-    </appender>
-
-    <root>
-        <level value="DEBUG" />
-        <appender-ref ref="RollingFile" />
-        <appender-ref ref="ErrorFile"/>
-    </root>
+	<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+		<staticLogFileName value="false" />
+		<appendToFile value="true"/>
+		<maximumFileSize value="200MB"/>
+		<preserveLogFileNameExtension value="true" />
+		<file value="..\\logs\\.log" />
+		<rollingStyle value="Date" />
+		<datePattern value="yyyy-MM-dd" />
+		<encoding value="utf-8" />
+		<layout type="log4net.Layout.PatternLayout">
+			<header value="[Start of logging]&#xd;&#xa;" />
+			<footer value="[End of logging]&#xd;&#xa;&#xd;&#xa;" />
+			<param name="ConversionPattern" value="%date %-5level %logger — %message%newline" />
+		</layout>
+	</appender>
+	<root>
+		<level value="DEBUG" />
+		<appender-ref ref="FileAppender" />
+	</root>
 </log4net>
