--- a/src/CourseToolHotReloader/CourseToolHotReloader.csproj
+++ b/src/CourseToolHotReloader/CourseToolHotReloader.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Autofac" Version="5.1.2" />
