--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -14,6 +14,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
+    "@microsoft/signalr": "3.1.6",
     "@skbkontur/react-icons": "4.3.1",
     "@skbkontur/react-ui": "2.3.1",
     "autoprefixer": "9.8.0",
